# outlook-cli

./: .gitignore  LICENSE  README.md  fix_coding_style.sh  pyproject.toml  setup.cfg
oltk/: const.py  ingest.py  main.py
otlk/: const.py  ingest.py  main.py  model.py  util.py
