[tool.poetry]
name = "oltk"
version = "0.1.0"
description = "転職ドラフト解析用のcliツール"
authors = ["Hiroaki Hasegawa <hasepappa@gmail.com>"]



[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.0"
fasttext = "^0.9.1"
tqdm = "^4.42.0"
python-dateutil = "^2.8.1"
click = "^7.0"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
black = "^19.10b0"
flake8 = "^3.7.9"
sphinx = "^2.3.1"
sphinx-rtd-theme = "^0.4.3"
jupyterlab = "^1.2.6"
jupyterlab_code_formatter = "^1.0.3"
matplotlib = "^3.1.3"
seaborn = "^0.10.0"
japanize-matplotlib = "^1.0.5"
adjustText = "^0.7.3"
tabulate = "^0.8.6"
isort = "^4.3.21"

[tool.poetry.scripts]
oltk="oltk.main:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

